--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
             fill="none"
             xmins="http://www.w3.org/2000/svg"
           ></svg>
+          <mask 
+            id="mask0_3_2547"
+            style="mask-type:alpha"
+            maskUnits="userSpaceOnUse"
+            x="0"
+            y="0"
+            width="360"
+            height="230"
+          ><rect width="360" height="230" rx="15.4011" fill="#16084C" /></mask>
+          <g mask="url(#mask)"
         </div>
       </section>
     </div>
