--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,80 @@
               filterUnits="userSpaceOnUse"
               color-interpolation-filters="sRGB"
             >
+            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                <feBlend
+                  mode="normal"
+                  in="SourceGraphic"
+                  in2="BackgroundImageFix"
+                  result="shape"
+                />
+                <feGaussianBlur
+                  stdDeviation="27.9144"
+                  result="effect1_foregroundBlur_3_2547"
+                />
+              </filter>
+              <filter
+                id="filter1_f_3_2547"
+                x="-9.12087"
+                y="-259.536"
+                width="468.777"
+                height="351.306"
+                filterUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB"
+              >
+                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                <feBlend
+                  mode="normal"
+                  in="SourceGraphic"
+                  in2="BackgroundImageFix"
+                  result="shape"
+                />
+                <feGaussianBlur
+                  stdDeviation="27.9144"
+                  result="effect1_foregroundBlur_3_2547"
+                />
+              </filter>
+            </defs>
+          </svg>
+        </div>
+
+        <div class="cc-logo">
+          <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
+          <span
+            ><img
+              src="/cc-default.svg"
+              alt="ícone do cartão de crédito selecionado"
+          /></span>
+        </div>
+
+        <div class="cc-info">
+          <div class="cc-number">1234 5678 9012 3456</div>
+
+          <div class="cc-holder">
+            <div class="label">Nome do titular</div>
+            <div class="value">FULANO DA SILVA</div>
+          </div>
+
+          <div class="cc-extra">
+            <div class="cc-expiration">
+              <div class="label">Expiração</div>
+              <div class="value">12/32</div>
+            </div>
+            <div class="cc-security">
+              <div class="label">CVC</div>
+              <div class="value">123</div>
+            </div>
+            <img src="/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
+          </div>
+        </div>
+      </section>
+
+      <form action="">
+        <div class="input-wrapper">
+          <label for="card-number">Número do cartão</label>
+          <input id="card-number" />
+        </div>
+
         </div>
       </section>
     </div>
