--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="app">
       <header>
-        <img src="logo.svg" alt="icone" />
+        <img src="./images/logo.svg" alt="icone" />
       </header>
 
       <section class="cc">
@@ -94,10 +94,10 @@
         </div>
 
         <div class="cc-logo">
-          <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
+          <span><img src="./images/cc-icon.svg" alt="ícone padrão de cartão" /></span>
           <span
             ><img
-              src="/cc-default.svg"
+              src="./images/cc-default.svg"
               alt="ícone do cartão de crédito selecionado"
           /></span>
         </div>
@@ -119,7 +119,7 @@
               <div class="label">CVC</div>
               <div class="value">123</div>
             </div>
-            <img src="/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
+            <img src="./images/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
           </div>
         </div>
       </section>
