--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,7 @@
       </form>
     </div>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
+/
